kasten/k10-hourly-rpo/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno_data_protection_tests
policies:
- ../k10-hourly-rpo.yaml
resources:
- backup-export-policy.yaml
results:
- kind: Policy
  policy: k10-policy-hourly-rpo
  resources:
  - daily-policy
  result: fail
  rule: k10-policy-hourly-rpo
- kind: Policy
  policy: k10-policy-hourly-rpo
  resources:
  - hourly-policy
  result: pass
  rule: k10-policy-hourly-rpo
